# BlueBall

./: .gitignore  README.md  main.py  pyproject.toml  train_completion_gym.py  train_infinite.py  train_levels.py  train_main.py  train_maze_curriculum.py
genomes/: README.md
genomes/inf1234_w1_20260604-183539/: final_best.npy  run.json
genomes/inf1234x3_w1_20260605-130411/: final_best.npy  run.json
genomes/lvls5_w1_20260605-121158/: final_best.npy  run.json
probes/: tune_boost_gap.py  tune_box_lava.py  tune_box_leap.py  tune_box_step.py
src/blueball/: __init__.py  abilities.py  agent.py  audio.py  camera.py  cli.py  collision.py  (+5 more)
src/blueball.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  segment_maneuvers.py  test_ai_curriculum.py  test_ai_multiepisode.py  test_ai_smoke.py  test_air_jump_refresh.py  test_animation.py  test_audio.py  test_boost_persistence.py  test_camera.py  test_cannon.py  test_chunks.py  test_climb_fitness.py  test_collision.py  test_curriculum_waypoints.py  test_double_jump_chunks.py  test_double_jump_segments.py  test_entities.py  test_generalist_recipe.py  test_genome_persistence.py  test_ghost.py  test_ghost_render.py  test_gym_eval.py  test_gym_fitness.py  test_gym_smoke.py  test_infinite_abilities.py  test_input_feel.py  test_level_loader.py  test_menu_scene.py  test_parallax.py  test_particles.py  test_pixel_theme.py  test_play_audio.py  test_play_scene.py  test_playback.py  test_player.py  test_race_flow.py  test_race_genomes.py  test_render_core.py  test_render_isolation.py  (+20 more)
tools/: schematic.py
(+161 files in other folders)
