[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueball"
version = "0.1.0"
description = "A Red Ball-inspired 2D physics platformer"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
    "pymunk>=6.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
